Pull in libgsystem, use it to read thumbnails with O_NOATIME

We can use libgsystem since we don't need to care about MSVC here.

https://bugzilla.gnome.org/show_bug.cgi?id=680326