libgnome-desktop/gnome-desktop-thumbnail.c
@@ -43,6 +43,7 @@
 #define GNOME_DESKTOP_USE_UNSTABLE_API
 #include "gnome-desktop-thumbnail.h"
 #include <glib/gstdio.h>
+#include <libgsystem.h>
 
 #define SECONDS_BETWEEN_STATS 10
 
@@ -344,7 +345,7 @@ _gdk_pixbuf_new_from_uri_at_scale (const char *uri,
     }
 
     if (input_stream == NULL) {
-        input_stream = G_INPUT_STREAM (g_file_read (file, NULL, NULL));
+        input_stream = gs_file_read_noatime (file, NULL, NULL);
         if (input_stream == NULL) {
 	    g_object_unref (file);
             return NULL;
